# formal

./: .gitignore  Makefile  README.md  comparison.py  config.py  constrained_model.py  dataset.py  depth.py  download.py  form.py  main.py  policy_network.py  pyproject.toml  requirements.txt  rl_environment.py  test_env.py  train.py  tree_test.py  ver2.py  z3_model.py
docs/: formal.md  rl_explanation.md
src/rl/: rl_environment.py  test_env.py  train.py
src/utils/: dataset.py
src/verification/: comparison.py  z3_model.py
